--- a/MyILRuntimeDemo/HotFix_Project/HotFix_Project.csproj
+++ b/MyILRuntimeDemo/HotFix_Project/HotFix_Project.csproj
@@ -69,6 +69,7 @@
     <Compile Include="demo\TestDelegate.cs" />
     <Compile Include="demo\InstanceClass.cs" />
     <Compile Include="Global\OtherData_hotfix.cs" />
+    <Compile Include="Hall\Game\SanRenDouLogic_hotfix.cs" />
     <Compile Include="Hall\Game\YanChengMaJiangLogic_hotfix.cs" />
     <Compile Include="Hall\UI\Login\Login_hotfix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
