--- a/MyILRuntimeDemo/HotFix_Project/HotFix_Project.csproj
+++ b/MyILRuntimeDemo/HotFix_Project/HotFix_Project.csproj
@@ -38,9 +38,11 @@
     <Reference Include="DOTween, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ILRuntimeDemo\Assets\DOTween\DOTween.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="LitJson">
       <HintPath>..\ILRuntimeDemo\Assets\Json\LitJson.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
